[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "deaotpy"
version = "1.9.0"
description = "Decoupling Features in Hierarchical Propagation for Video Object Segmentation."
readme = { file = "aot/README.md" , content-type = "text/markdown" }

license = { file = "aot/LICENSE" }
requires-python = ">=3.10"
keywords = [
    "deep-learning",
    "pytorch",
    "vision",
    "object-segmentation",
    "video"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23.5",
  "torch>=2.0.0",
  "torchvision>=0.15.1",
  "spatial-correlation-sampler>=0.4.0"
]

[project.urls]
repository = "https://github.com/yoxu515/aot-benchmark"